# pios-core-self-hosted

./: NOTICE  OPENNESS.md  PUBLIC_SPLIT_PREVIEW_MANIFEST.json  README.md  TRADEMARKS.md  pyproject.toml
docs/decisions/: production-release-key-custody.md
docs/install/: owner-agent-handoff.md  provider-import-proof-template.md  provider-readiness-matrix.md  release-verification.md  self-hosted-cloud-provider-imports.md  self-hosted-qemu-local-vm.md
docs/release-keys/: peecos-release-signing-key-fingerprint.txt  peecos-release-signing-key.pub
docs/runbooks/: azure-import-proof-plan.md  external-vm-provider-proof-plan.md  google-cloud-import-proof-plan.md  local-machine-vm-setup-validation-plan.md  production-release-key-setup-checklist.md  production-release-signing-ceremony.md  public-repository-and-release-layout.md  self-hosted-golden-vm-image-plan.md  (+1 more)
image/packer/: README.md  (+2 more)
scripts/: build_google_cloud_import_artifact.py  build_self_hosted_image_root.py  build_self_hosted_public_release_manifest.py  build_self_hosted_qemu_image_candidate.py  check_public_doc_refs.py  check_self_hosted_vm_builder_prereqs.py  create_production_release_key.py  export_core_bundle.py  hydrate_core_bundle.py  package_self_hosted_image_root.py  package_self_hosted_qemu_image_candidate.py  pios_core_init.py  plan_google_cloud_import_proof.py  prove_self_hosted_core.py  run_google_cloud_import_proof.py  run_self_hosted_qemu_boot_proof.py  sign_self_hosted_qemu_release_package.py  validate_core_bundle.py  validate_self_hosted_image_root.py  validate_self_hosted_qemu_release_package.py
(+8 files in other folders)
